--- a/Watchlist.html
+++ b/Watchlist.html
@@ -492,114 +492,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://www.themoviedb.org/t/p/original/dOBdatHIVppvmRFw2z7bf9VKJr9.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Girl, Interrupted</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1999</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/7OLxcpW44LMpdDmbotchhfFOeGf.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">54</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1998</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/etjgNJvuNW2205EdZRMHFPKQpxS.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Great Outdoors</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1988</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://www.themoviedb.org/t/p/original/bymJtYNIdiAiBR1LRetaJXbfryc.jpg"
               class="movie-poster"
             />
@@ -611,78 +503,6 @@
                 >
               </div>
               <span class="movie-year-text">1991</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/g3LC4mc17fQIFnPsMi81zzKC5gF.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Turner & Hooch</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1989</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/srb1XnrlDZHcdpjBKqUu4qAzxKU.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">A Knight's Tale</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2001</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -827,42 +647,6 @@
                 >
               </div>
               <span class="movie-year-text">1995</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/stJx9BQZbXrZnTGf9Erc7d2UMVc.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Twins</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1988</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -1137,41 +921,7 @@
           </div>
         </div>
 
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/uTQMZLsbpoEYCjnJX8G3CmjCZDg.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Apt Pupil</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1998</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
+       
 
         <div class="movie-item">
           <div class="movie-content">
@@ -1352,6 +1102,70 @@
             </div>
           </div>
         </div>
+
+         <div class="movie-item">
+          <div class="movie-content">
+            <img src="https://image.tmdb.org/t/p/original/v7TaX8kXMXs5yFFGR41guUDNcnB.jpg" class="movie-poster" />
+            <h2 class="movie-title">Kill Bill: Vol. 1 </h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span>
+              </div>
+              <span class="movie-year-text">2003</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+        
+         <div class="movie-item">
+          <div class="movie-content">
+            <img src="https://image.tmdb.org/t/p/original/zhWiyUMLPupH9djszTtyBhiv6KU.jpg" class="movie-poster" />
+            <h2 class="movie-title">Kill Bill: Vol. 2</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span>
+              </div>
+              <span class="movie-year-text">2004</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div> 
 
         <!-- Add more movies -->
       </div>
